updates to animations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
 </head>
 <body>
-  <div class="container" style="width:80%; height:800px;overflow-y: hidden; text-align: center;">
+  <div class="container" style="width:80%; height:800px;overflow-y: hidden;overflow-x: hidden; text-align: center;">
     <p>Press the buttons to change the box!</p>
 
     <div id="box" style="height:150px; width:150px; background-color:orange; margin:25px auto"></div>
@@ -19,8 +19,9 @@
     <button style="margin:5px;" id="button7">Run Away</button>
     <button style="margin:5px;" id="button8">Jeff Goldblum</button>
     <button style="margin:5px;" id="button9">Reset</button>
-    <button style="margin:5px;background:red;color:#fff;border-radius: 3px;" id="button10">RED BUTTON</button>
-    <button style="margin:5px;background:green;color:#fff;border-radius: 3px;" id="button11">Nothing</button>
+    <button style="margin:5px;" id="button10">Useless</button>
+    <button style="margin:5px;background:red;color:#fff;border-radius: 3px;" id="button11">RED BUTTON</button>
+    
 
     <script type="text/javascript" src="javascript.js"></script>
   </div>
